--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -35,29 +35,21 @@ pre code {
 	width: 33%;
 	padding: 5% 10%;
 	margin: auto;
-	background-color: white;
+	background-color: #fff;
 }
 #footer {
 	width: 53%;
-	padding: 1% 0;
+	padding: 2% 0;
 	margin: auto;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-b,
-strong {
-
 }
 a {
 	text-decoration: none;
-	color: blue;
+	color: #777;
+	border-radius: 5px;
 }
 a:hover {
-	text-decoration: underline;
+	background-color: #777;
+	color: #fff;
 }
 @media screen and (max-width: 64em) {
 	html,
