--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -43,9 +43,14 @@ pre code {
 	margin: auto;
 }
 #links {
-	padding: 7.5% 11%;
+	padding: 7% 16%;
 	float: right;
 	position: fixed;
+}
+#links img {
+	display: block;
+	width: 7.5%;
+	margin-bottom: 2%;
 }
 a {
 	text-decoration: none;
@@ -53,6 +58,9 @@ a {
 }
 a:hover {
 	text-decoration: underline;
+}
+img {
+	max-width: 100%;
 }
 @media screen and (max-width: 64em) {
 	html,
@@ -72,5 +80,11 @@ a:hover {
 		padding: none;
 		float: none;
 		position: static;
+	}
+	#links img {
+		display: inline;
+		width: 10%;
+		margin-bottom: none;
+		margin-right: 2%;
 	}
 }
